# projektuppgift-DD1310-2024

./: .gitignore  Projektspecifikation.md  README.md  User flow.drawio  booking_flow.drawio  mac.bat  pyproject.toml  windows.ps1
src/biljettbokning/: __init__.py  __main__.py  app.py  model.py  terminal.py
src/biljettbokning/widgets/: bookingpopup.py  menuframe.py  unbookingpopup.py
test/: test_carriage.py  test_train.py  tåg.xlsx
