[project]
name = "biljettbokning"
version = "0.1.0"
description = "Biljettbokningssystem för uppg. 127, DD1310"
authors = [{ name = "Marcell Ziegler", email = "marcellz@kth.se" }]
dependencies = []

requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
